--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 												<div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
 													aria-labelledby="headingFour">
 													<div class="panel-body">
-														<p>Completed my junior college from <strong>Junior College</strong>, with Physics, 
+														<p>Completed my junior college from <strong>Prerna Junior College</strong>, with Physics, 
 															Chemisty, Maths and Biology as majors and graduated in 2020 with 
 															<strong>79.85%</strong>.
 														</p>
