--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit google drive Link -->
-										<a href="https://drive.google.com/file/d/1EpxgY7abky_wCVeATQgZpJFulZvTWkQl/view"
+										<a href="https://drive.google.com/file/d/1_c5Rj-E5Ntf3MLoViuP_ytBM6aoZqMVL/view?usp=drive_link"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
@@ -223,18 +223,18 @@
 							</div>
 
 							<!-- Remove this div if you have only two specialization -->
-							<div class="col-md-4 text-center animate-box">
+							<!-- <div class="col-md-4 text-center animate-box">
 								<div class="services color-3">
 									<span class="icon">
 										<i class="icon-point-of-interest"></i>
 									</span>
-									<div class="desc">
+									<div class="desc"> -->
 										<!-- Edit content for your specialization -->
-										<h3>DOMAIN EXPERTISE</h3>
+										<!-- <h3>DOMAIN EXPERTISE</h3>
 										<p>E-Commerce Domain</p>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 				</section>
 
@@ -252,12 +252,12 @@
 						<div class="row">
 
 							<!-- Edit content based on your Skills and percentages -->
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
 									<h3>C</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="79"
-											aria-valuemin="0" aria-valuemax="100" style="width:70%">
+											aria-valuemin="0" aria-valuemax="100" style="width:79%">
 											<span>70%</span>
 										</div>
 									</div>
@@ -269,12 +269,12 @@
 									<h3>C++</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="80%"
-											aria-valuemin="0" aria-valuemax="100" style="width:70%">
+											aria-valuemin="0" aria-valuemax="100" style="width:80%">
 											<span>70%</span>
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
@@ -305,8 +305,8 @@
 									<h3>Tableau</h3>
 									<div class="progress">
 										<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:45%">
-											<span>45% (Learning)</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:70%">
+											<span>70%</span>
 										</div>
 									</div>
 								</div>
@@ -341,8 +341,8 @@
 									<h3>Power BI</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="82"
-											aria-valuemin="0" aria-valuemax="100" style="width:75%">
-											<span>75% (Learning)</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60(Learning)</span>
 										</div>
 									</div>
 								</div>
@@ -353,8 +353,8 @@
 									<h3>HTML/CSS</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="35"
-											aria-valuemin="0" aria-valuemax="100" style="width:70%">
-											<span>70%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60%</span>
 										</div>
 									</div>
 								</div>
@@ -362,11 +362,11 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>Web Analytics</h3>
+									<h3>Graph analytics</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:40%">
-											<span>40% (Learning)</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:75%">
+											<span>75%</span>
 										</div>
 									</div>
 								</div>
@@ -414,6 +414,7 @@
 															<li>Trimester-1 = 72%</li>
 															<li>Trimester-2 = 70%</li>
 															<li>Trimester-3 = 67%</li>
+															<li>Trimester-4 = 69%</li>
 														</ul>
 													</div>
 												</div>
@@ -573,6 +574,20 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="timeline-centered">
+									<!-- Edit content based on your Internships or remove article tag -->
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-2">
+												<i class="fas fa-laptop-code"></i>
+											</div>
+											<div class="timeline-label" , style="background: #e5edf4;">
+												<h2><a href="#">Hackveda</a> <span> </span></h2>
+												<p id="project-tool">[18th October, 2024 (Currently working here)]</p>
+												<p id="project-tool">Data Science Intern</p>
+											</div>
+										</div>
+									</article>
+
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 
