--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit google drive Link -->
-										<a href="https://drive.google.com/file/d/1_c5Rj-E5Ntf3MLoViuP_ytBM6aoZqMVL/view?usp=drive_link"
+										<a href="https://drive.google.com/file/d/1CjjDvY8YQmoOO8nDhxNRlgiSJPSyc08w/view?usp=sharing"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
